--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -34,3 +34,16 @@
     width : 33.3333% ;
     height : 100%
 }
+
+.loginBackgroundStyle{
+    position : absolute ;
+    width : 100%;
+    height : 100% ;
+    background-image : URL('https://c0.wallpaperflare.com/preview/135/67/741/academic-calculation-calculator-compute.jpg') ;
+    background-size : cover
+}
+
+.welcomeBackgroundStyle{
+    background-image : URL('https://t4.ftcdn.net/jpg/03/19/40/21/360_F_319402179_hpmeoOSrarYOFEMlJCeUZahM6AFogCVD.jpg') !important;
+    
+} 
